给主页增加咨询培训

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <i class='nav_icon'></i>                        
                     </a>
                     <div class='item_content'>
-                        <a href=''>流通所新闻</a>
+                        <a href='pages/news1.html'>流通所新闻</a>
                         <a href=''>基地资讯</a>
                         <a href=''>媒体报道</a>
                     </div>
@@ -115,7 +115,7 @@
                                                                                          width="20" height="37"></a>
         </section>
         <!--科研资讯-->
-        <section class='info'>
+        <section class='info container-types'>
             <a class='part-title info-title' href="#">科研资讯</a>
             <div class='flexbox'>
                 <div class='newsLeft'>
@@ -158,7 +158,7 @@
 
         </section>
         <!-- 科学研究、学术交流、团队介绍、科研成果 -->
-        <section class='mix'>
+        <section class='container-types'>
             <div class='mixLeft'>
                 <div class='mix-box'>
                     <a class='part-title minx-box1-title' href="#">科学研究</a>
@@ -239,28 +239,131 @@
 
             </div>
         </section>
-        <!--部分-->
+        <!--咨询培训、智库建设-->
+        <section class='container-types train'>
+            <a class='part-title train-title' href="#">咨询培训</a>
 
+            <div class='index-card'>
+                <a href="#">
+                    <div class='card-time'>
+                        <p>9月</p>
+                        <p>30号</p>
+                    </div>
+                    <div class='card-content'>
+                        <div class='card-content-inner'>
+                            <p>
+                                王先庆给2016年顺德商会协会秘书长培训班授课
+
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class='index-card'>
+                <a href="#">
+
+                    <div class='card-time'>
+                        <p>8月</p>
+                        <p>11号</p>
+                    </div>
+                    <div class='card-content'>
+                        <div class='card-content-inner'>
+                            <p>
+                                王先庆给广东省国土资源厅干部培训班授课
+
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class='index-card'>
+                <a href="#">
+
+                    <div class='card-time'>
+                        <p>6月</p>
+                        <p>2号</p>
+                    </div>
+
+                    <div class='card-content'>
+                        <div class='card-content-inner'>
+                            <p>
+                                王先庆在阳江进行“新常态下创新驱动”专题培训班主讲
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class='index-card'>
+                <a href="#">
+
+                    <div class='card-time'>
+                        <p>6月</p>
+                        <p>2号</p>
+                    </div>
+
+                    <div class='card-content'>
+                        <div class='card-content-inner'>
+                            <p>
+                                王先庆贵州荔波县2016党政干部培训班授课
+
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class='index-card'>
+                <a href="#">
+
+                    <div class='card-time'>
+                        <p>5月</p>
+                        <p>16号</p>
+                    </div>
+                    <div class='card-content'>
+                        <div class='card-content-inner'>
+                            <p>
+                                王先庆给商务部第四期互联网+传统专业市场培训班授课
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class='index-card'>
+                <a href="#">
+
+                    <div class='card-time'>
+                        <p>11月</p>
+                        <p>9号</p>
+                    </div>
+                    <div class='card-content'>
+                        <div class='card-content-inner'>
+                            <p>
+                                王先庆给商务部第十四期商贸物流与“互联网+物流”研修班授课
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </section>
         <!-- </div> -->
 
     </div>
     <footer>
         <div class='footer-box'>
             <div class="footer-link">
-                    <a href="#" target="_blank" title="意见反馈">意见反馈</a>
-                    <a href="#" target="_blank" title="友情链接">友情链接</a> 
-                    <a href="#" target="_blank" title="友情链接">管理登录</a> 
-            
+                <a href="#" target="_blank" title="意见反馈">意见反馈</a>
+                <a href="#" target="_blank" title="友情链接">友情链接</a>
+                <a href="#" target="_blank" title="友情链接">管理登录</a>
+
             </div>
             <div class='footer-copyright'>
                 <div class='copyright-left'>
-                        <p>版权所有 Copyright© 2002-2017 维护建设:广东财经大学流通经济研究所</p>
+                    <p>版权所有 Copyright© 2002-2017 维护建设:广东财经大学流通经济研究所</p>
                     <p>广东财经大学流通经济研究所</p>
-                    
+
                 </div>
                 <div class='copyright-right'>
-                        <p>联系电话：020-84096050 84096319</p>
-                        <p> 传真号码：020-84096050</p>
+                    <p>联系电话：020-84096050 84096319</p>
+                    <p> 传真号码：020-84096050</p>
                 </div>
             </div>
         </div>
