修复主页部分bug

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             </div>
             <div class='footer-copyright'>
                 <div class='copyright-left'>
-                    <p>版权所有 Copyright© 2002-2017 维护建设:广东财经大学流通经济研究所</p>
+                    <p>版权所有 Copyright© 2002-2017</p>
                     <p>广东财经大学流通经济研究所</p>
 
                 </div>
