--- a/pages/academic3.html
+++ b/pages/academic3.html
@@ -90,8 +90,6 @@
 
         </ul>
     </div>
-
-
 </header>
 <div class="container">
     <!--左侧-->
@@ -99,47 +97,44 @@
         <div class="boxLeft">
             <!--左侧导航栏上面的装饰-->
             <div class="navTop">
-                <div class="image"><img src="../images/news1.png" alt=""></div>
-                <div class="line"><a href="#">科研资讯</a></div>
+                <div class="image"><img src="../images/academic1.png" alt=""></div>
+                <div class="line"><a href="#">学术交流</a></div>
             </div>
 
             <!--左侧导航栏-->
             <ul class="itemUl">
-                <li class="itemLi"><a href="news1.html" >流通所新闻</a></li>
-                <li class="itemLi"><a href="news2.html">基地资讯</a></li>
-                <li class="itemLi"><a href="news3.html" id="active">媒体报道</a></li>
+                <li class="itemLi"><a href="academic1.html">来访交流</a></li>
+                <li class="itemLi"><a href="academic2.html">调研考察</a></li>
+                <li class="itemLi"><a href="academic3.html" id="active">主办年会</a></li>
+                <li class="itemLi"><a href="academic4.html">流通论坛</a></li>
             </ul>
 
             <!--左侧导航栏下面的图片-->
             <div class="navBottom">
-                <img src="../images/news2.png" alt="">
+                <img src="../images/academic2.png" alt="">
             </div>
 
 
         </div>
 
         <div class="boxRight">
-            <div class="tit"><a href="#">流通所新闻</a></div>
+            <div class="tit"><a href="#">主办年会</a></div>
             <div class="detail">
                 <ul>
-                    <li><a href="#">媒体报道1
-                    </a></li>
-                    <li><a href="#">媒体报道2</a></li>
-                    <li><a href="#">媒体报道3
-                    </a></li>
-                    <li><a href="#">媒体报道4</a></li>
-                    <li><a href="#">媒体报道5</a></li>
-                    <li><a href="#">媒体报道6
-                    </a></li>
-                    <li><a href="#">媒体报道7</a></li>
-                    <li><a href="#">媒体报道8</a></li>
-                    <li><a href="#">媒体报道9</a></li>
-                    <li><a href="#">媒体报道10</a></li>
-                    <li><a href="#">媒体报道11
-                    </a></li>
-                    <li><a href="#">媒体报道12</a></li>
-                    <li><a href="#">媒体报道13</a></li>
-                    <li><a href="#">媒体报道14</a></li>
+                    <li><a href="#">主办年会1 </a></li>
+                    <li><a href="#">主办年会2</a></li>
+                    <li><a href="#">主办年会3</a></li>
+                    <li><a href="#">主办年会4 </a></li>
+                    <li><a href="#">主办年会5 </a></li>
+                    <li><a href="#">主办年会6 </a></li>
+                    <li><a href="#">主办年会7 </a></li>
+                    <li><a href="#">主办年会8 </a></li>
+                    <li><a href="#">主办年会9 </a></li>
+                    <li><a href="#">主办年会10 </a></li>
+                    <li><a href="#">主办年会11</a></li>
+                    <li><a href="#">主办年会12 </a></li>
+                    <li><a href="#">主办年会13</a></li>
+                    <li><a href="#">主办年会14 </a></li>
                 </ul>
             </div>
             <!--分页组件-->
