--- a/pages/consult1.html
+++ b/pages/consult1.html
@@ -90,8 +90,6 @@
 
         </ul>
     </div>
-
-
 </header>
 <div class="container">
     <!--左侧-->
@@ -99,47 +97,43 @@
         <div class="boxLeft">
             <!--左侧导航栏上面的装饰-->
             <div class="navTop">
-                <div class="image"><img src="../images/news1.png" alt=""></div>
-                <div class="line"><a href="#">科研资讯</a></div>
+                <div class="image"><img src="../images/consult1.png" alt=""></div>
+                <div class="line"><a href="#">咨询培训</a></div>
             </div>
 
             <!--左侧导航栏-->
             <ul class="itemUl">
-                <li class="itemLi"><a href="news1.html" >流通所新闻</a></li>
-                <li class="itemLi"><a href="news2.html">基地资讯</a></li>
-                <li class="itemLi"><a href="news3.html" id="active">媒体报道</a></li>
+                <li class="itemLi"><a href="consult1.html" id="active">咨询顾问</a></li>
+                <li class="itemLi"><a href="consult2.html">企业策划</a></li>
+                <li class="itemLi"><a href="consult3.html">专家培训</a></li>
             </ul>
 
             <!--左侧导航栏下面的图片-->
             <div class="navBottom">
-                <img src="../images/news2.png" alt="">
+                <img src="../images/consult2.png" alt="">
             </div>
 
 
         </div>
 
         <div class="boxRight">
-            <div class="tit"><a href="#">流通所新闻</a></div>
+            <div class="tit"><a href="#">咨询顾问</a></div>
             <div class="detail">
                 <ul>
-                    <li><a href="#">媒体报道1
-                    </a></li>
-                    <li><a href="#">媒体报道2</a></li>
-                    <li><a href="#">媒体报道3
-                    </a></li>
-                    <li><a href="#">媒体报道4</a></li>
-                    <li><a href="#">媒体报道5</a></li>
-                    <li><a href="#">媒体报道6
-                    </a></li>
-                    <li><a href="#">媒体报道7</a></li>
-                    <li><a href="#">媒体报道8</a></li>
-                    <li><a href="#">媒体报道9</a></li>
-                    <li><a href="#">媒体报道10</a></li>
-                    <li><a href="#">媒体报道11
-                    </a></li>
-                    <li><a href="#">媒体报道12</a></li>
-                    <li><a href="#">媒体报道13</a></li>
-                    <li><a href="#">媒体报道14</a></li>
+                    <li><a href="#">咨询顾问1 </a></li>
+                    <li><a href="#">咨询顾问2</a></li>
+                    <li><a href="#">咨询顾问3 </a></li>
+                    <li><a href="#">咨询顾问4 </a></li>
+                    <li><a href="#">咨询顾问5 </a></li>
+                    <li><a href="#">咨询顾问6 </a></li>
+                    <li><a href="#">咨询顾问7 </a></li>
+                    <li><a href="#">咨询顾问8 </a></li>
+                    <li><a href="#">咨询顾问9 </a></li>
+                    <li><a href="#">咨询顾问10 </a></li>
+                    <li><a href="#">咨询顾问11<a></li>
+                    <li><a href="#">咨询顾问12 </a></li>
+                    <li><a href="#">咨询顾问13 </a></li>
+                    <li><a href="#">咨询顾问14 </a></li>
                 </ul>
             </div>
             <!--分页组件-->
