--- a/pages/research1.html
+++ b/pages/research1.html
@@ -90,8 +90,6 @@
 
         </ul>
     </div>
-
-
 </header>
 <div class="container">
     <!--左侧-->
@@ -99,47 +97,43 @@
         <div class="boxLeft">
             <!--左侧导航栏上面的装饰-->
             <div class="navTop">
-                <div class="image"><img src="../images/news1.png" alt=""></div>
-                <div class="line"><a href="#">科研资讯</a></div>
+                <div class="image"><img src="../images/research1.png" alt=""></div>
+                <div class="line"><a href="#">科学研究</a></div>
             </div>
 
             <!--左侧导航栏-->
             <ul class="itemUl">
-                <li class="itemLi"><a href="news1.html" >流通所新闻</a></li>
-                <li class="itemLi"><a href="news2.html">基地资讯</a></li>
-                <li class="itemLi"><a href="news3.html" id="active">媒体报道</a></li>
+                <li class="itemLi"><a href="research1.html" id="active">课题研究</a></li>
+                <li class="itemLi"><a href="research2.html">课题招标</a></li>
+                <li class="itemLi"><a href="research3.html">成果影响</a></li>
             </ul>
 
             <!--左侧导航栏下面的图片-->
             <div class="navBottom">
-                <img src="../images/news2.png" alt="">
+                <img src="../images/research2.png" alt="">
             </div>
 
 
         </div>
 
         <div class="boxRight">
-            <div class="tit"><a href="#">流通所新闻</a></div>
+            <div class="tit"><a href="#">课题研究</a></div>
             <div class="detail">
                 <ul>
-                    <li><a href="#">媒体报道1
-                    </a></li>
-                    <li><a href="#">媒体报道2</a></li>
-                    <li><a href="#">媒体报道3
-                    </a></li>
-                    <li><a href="#">媒体报道4</a></li>
-                    <li><a href="#">媒体报道5</a></li>
-                    <li><a href="#">媒体报道6
-                    </a></li>
-                    <li><a href="#">媒体报道7</a></li>
-                    <li><a href="#">媒体报道8</a></li>
-                    <li><a href="#">媒体报道9</a></li>
-                    <li><a href="#">媒体报道10</a></li>
-                    <li><a href="#">媒体报道11
-                    </a></li>
-                    <li><a href="#">媒体报道12</a></li>
-                    <li><a href="#">媒体报道13</a></li>
-                    <li><a href="#">媒体报道14</a></li>
+                    <li><a href="#">彭雷清教授申报课题获教育部一般项目立项 </a></li>
+                    <li><a href="#">湖北康华集团董事长黄文华一行到访流通所考察</a></li>
+                    <li><a href="#">邓华平：智慧物流与多式联运的探索（华南商界百人名家系列讲座 第28讲） </a></li>
+                    <li><a href="#">王先庆受邀参加2017广州商界新春大会 </a></li>
+                    <li><a href="#">阳东区商业网点规划调研组赴阳江市调研 </a></li>
+                    <li><a href="#">广州现代物流与电子商务发展研究基地2016年度科研课题立项通知 </a></li>
+                    <li><a href="#">王先庆出席海珠区江南西步行街项目座谈会 </a></li>
+                    <li><a href="#">广州市哲学社会科学发展“十三五”规划2016年度课题指南 </a></li>
+                    <li><a href="#">打造商贸中心和特色旅游中心 </a></li>
+                    <li><a href="#">王先庆：佛山市打造“互联网+家具产业”发展新模式 </a></li>
+                    <li><a href="#">专家为三水高铁经济建言 7大对策指出发展方向 </a></li>
+                    <li><a href="#">王先庆：东莞沙田打造新兴区域商贸中心 </a></li>
+                    <li><a href="#">广东省人民政府关于促进内贸流通健康发展的实施意见 </a></li>
+                    <li><a href="#">召开“十三五”商贸服务业发展规划座谈会 </a></li>
                 </ul>
             </div>
             <!--分页组件-->
