--- a/pages/archi2.html
+++ b/pages/archi2.html
@@ -90,8 +90,6 @@
 
         </ul>
     </div>
-
-
 </header>
 <div class="container">
     <!--左侧-->
@@ -99,47 +97,43 @@
         <div class="boxLeft">
             <!--左侧导航栏上面的装饰-->
             <div class="navTop">
-                <div class="image"><img src="../images/news1.png" alt=""></div>
-                <div class="line"><a href="#">科研资讯</a></div>
+                <div class="image"><img src="../images/research1.png" alt=""></div>
+                <div class="line"><a href="#">科研成果</a></div>
             </div>
 
             <!--左侧导航栏-->
             <ul class="itemUl">
-                <li class="itemLi"><a href="news1.html" >流通所新闻</a></li>
-                <li class="itemLi"><a href="news2.html">基地资讯</a></li>
-                <li class="itemLi"><a href="news3.html" id="active">媒体报道</a></li>
+                <li class="itemLi"><a href="archi1.html">学术论文</a></li>
+                <li class="itemLi"><a href="archi2.html" id="active">著作</a></li>
+                <li class="itemLi"><a href="archi3.html">研究报告</a></li>
             </ul>
 
             <!--左侧导航栏下面的图片-->
             <div class="navBottom">
-                <img src="../images/news2.png" alt="">
+                <img src="../images/research2.png" alt="">
             </div>
 
 
         </div>
 
         <div class="boxRight">
-            <div class="tit"><a href="#">流通所新闻</a></div>
+            <div class="tit"><a href="#">著作</a></div>
             <div class="detail">
                 <ul>
-                    <li><a href="#">媒体报道1
-                    </a></li>
-                    <li><a href="#">媒体报道2</a></li>
-                    <li><a href="#">媒体报道3
-                    </a></li>
-                    <li><a href="#">媒体报道4</a></li>
-                    <li><a href="#">媒体报道5</a></li>
-                    <li><a href="#">媒体报道6
-                    </a></li>
-                    <li><a href="#">媒体报道7</a></li>
-                    <li><a href="#">媒体报道8</a></li>
-                    <li><a href="#">媒体报道9</a></li>
-                    <li><a href="#">媒体报道10</a></li>
-                    <li><a href="#">媒体报道11
-                    </a></li>
-                    <li><a href="#">媒体报道12</a></li>
-                    <li><a href="#">媒体报道13</a></li>
-                    <li><a href="#">媒体报道14</a></li>
+                    <li><a href="#">著作1 </a></li>
+                    <li><a href="#">著作2</a></li>
+                    <li><a href="#">著作3</a></li>
+                    <li><a href="#">著作4 </a></li>
+                    <li><a href="#">著作5 </a></li>
+                    <li><a href="#">著作6 </a></li>
+                    <li><a href="#">著作7 </a></li>
+                    <li><a href="#">著作8 </a></li>
+                    <li><a href="#">著作9 </a></li>
+                    <li><a href="#">著作10 </a></li>
+                    <li><a href="#">著作11</a></li>
+                    <li><a href="#">著作12 </a></li>
+                    <li><a href="#">著作13 </a></li>
+                    <li><a href="#">著作14 </a></li>
                 </ul>
             </div>
             <!--分页组件-->
