--- a/pages/construct1.html
+++ b/pages/construct1.html
@@ -90,8 +90,6 @@
 
         </ul>
     </div>
-
-
 </header>
 <div class="container">
     <!--左侧-->
@@ -99,47 +97,42 @@
         <div class="boxLeft">
             <!--左侧导航栏上面的装饰-->
             <div class="navTop">
-                <div class="image"><img src="../images/news1.png" alt=""></div>
-                <div class="line"><a href="#">科研资讯</a></div>
+                <div class="image"><img src="../images/construct1.png" alt=""></div>
+                <div class="line"><a href="#">智库建设</a></div>
             </div>
 
             <!--左侧导航栏-->
             <ul class="itemUl">
-                <li class="itemLi"><a href="news1.html" >流通所新闻</a></li>
-                <li class="itemLi"><a href="news2.html">基地资讯</a></li>
-                <li class="itemLi"><a href="news3.html" id="active">媒体报道</a></li>
+                <li class="itemLi"><a href="construct1.html" id="active">名家百人讲座</a></li>
+                <li class="itemLi"><a href="construct2.html">智库动态</a></li>
             </ul>
 
             <!--左侧导航栏下面的图片-->
             <div class="navBottom">
-                <img src="../images/news2.png" alt="">
+                <img src="../images/construct2.png" alt="">
             </div>
 
 
         </div>
 
         <div class="boxRight">
-            <div class="tit"><a href="#">流通所新闻</a></div>
+            <div class="tit"><a href="#">名家百人讲座</a></div>
             <div class="detail">
                 <ul>
-                    <li><a href="#">媒体报道1
-                    </a></li>
-                    <li><a href="#">媒体报道2</a></li>
-                    <li><a href="#">媒体报道3
-                    </a></li>
-                    <li><a href="#">媒体报道4</a></li>
-                    <li><a href="#">媒体报道5</a></li>
-                    <li><a href="#">媒体报道6
-                    </a></li>
-                    <li><a href="#">媒体报道7</a></li>
-                    <li><a href="#">媒体报道8</a></li>
-                    <li><a href="#">媒体报道9</a></li>
-                    <li><a href="#">媒体报道10</a></li>
-                    <li><a href="#">媒体报道11
-                    </a></li>
-                    <li><a href="#">媒体报道12</a></li>
-                    <li><a href="#">媒体报道13</a></li>
-                    <li><a href="#">媒体报道14</a></li>
+                    <li><a href="#">名家百人讲座1 </a></li>
+                    <li><a href="#">名家百人讲座2</a></li>
+                    <li><a href="#">名家百人讲座3 </a></li>
+                    <li><a href="#">名家百人讲座4 </a></li>
+                    <li><a href="#">名家百人讲座5 </a></li>
+                    <li><a href="#">名家百人讲座6 </a></li>
+                    <li><a href="#">名家百人讲座7 </a></li>
+                    <li><a href="#">名家百人讲座8 </a></li>
+                    <li><a href="#">名家百人讲座9 </a></li>
+                    <li><a href="#">名家百人讲座10 </a></li>
+                    <li><a href="#">名家百人讲座11<a></li>
+                    <li><a href="#">名家百人讲座12 </a></li>
+                    <li><a href="#">名家百人讲座13 </a></li>
+                    <li><a href="#">名家百人讲座14 </a></li>
                 </ul>
             </div>
             <!--分页组件-->
