--- a/pages/人物传记列表.html
+++ b/pages/人物传记列表.html
@@ -12,43 +12,48 @@
     <link rel="stylesheet" href="../style/person.css">
 </head>
 <body>
-     <div class="container">
-      <div class="person">
+<div class="container">
+    <div class="person">
         <div class="personList">
             <a class="list_item" href="">
-                <img class="list_img" src="http://img4.mukewang.com/54584e2c00010a2c02200220-100-100.jpg" alt="图片加载失败" title="7七月"><br>
+                <img class="list_img" src="http://img4.mukewang.com/54584e2c00010a2c02200220-100-100.jpg" alt="图片加载失败"
+                     title="7七月"><br>
                 <span class="list_name">7七月</span>
                 <span class="list_title">全栈工程师</span>
                 <span class="list_content">多年研发经验，毕业后一直任职于某大型互联网公司，担任研发经理。后开始自己的创业。精通Python、NodeJS、Javascript、PHP等，一直致力于Web技术的研究</span>
             </a>
             <a class="list_item" href="">
-                <img class="list_img" src="http://img4.mukewang.com/54584e2c00010a2c02200220-100-100.jpg" alt="图片加载失败" title="7七月"><br>
+                <img class="list_img" src="http://img4.mukewang.com/54584e2c00010a2c02200220-100-100.jpg" alt="图片加载失败"
+                     title="7七月"><br>
                 <span class="list_name">7七月</span>
                 <span class="list_title">全栈工程师</span>
                 <span class="list_content">多年研发经验，毕业后一直任职于某大型互联网公司，担任研发经理。后开始自己的创业。精通Python、NodeJS、Javascript、PHP等，一直致力于Web技术的研究</span>
             </a>
             <a class="list_item" href="">
-                <img class="list_img" src="http://img4.mukewang.com/54584e2c00010a2c02200220-100-100.jpg" alt="图片加载失败" title="7七月"><br>
+                <img class="list_img" src="http://img4.mukewang.com/54584e2c00010a2c02200220-100-100.jpg" alt="图片加载失败"
+                     title="7七月"><br>
                 <span class="list_name">7七月</span>
                 <span class="list_title">全栈工程师</span>
                 <span class="list_content">多年研发经验，毕业后一直任职于某大型互联网公司，担任研发经理。后开始自己的创业。精通Python、NodeJS、Javascript、PHP等，一直致力于Web技术的研究</span>
             </a>
             <a class="list_item" href="">
-                <img class="list_img" src="http://img4.mukewang.com/54584e2c00010a2c02200220-100-100.jpg" alt="图片加载失败" title="7七月"><br>
+                <img class="list_img" src="http://img4.mukewang.com/54584e2c00010a2c02200220-100-100.jpg" alt="图片加载失败"
+                     title="7七月"><br>
                 <span class="list_name">7七月</span>
                 <span class="list_title">全栈工程师</span>
                 <span class="list_content">多年研发经验，毕业后一直任职于某大型互联网公司，担任研发经理。后开始自己的创业。精通Python、NodeJS、Javascript、PHP等，一直致力于Web技术的研究</span>
             </a>
             <a class="list_item" href="">
-                <img class="list_img" src="http://img4.mukewang.com/54584e2c00010a2c02200220-100-100.jpg" alt="图片加载失败" title="7七月"><br>
+                <img class="list_img" src="http://img4.mukewang.com/54584e2c00010a2c02200220-100-100.jpg" alt="图片加载失败"
+                     title="7七月"><br>
                 <span class="list_name">7七月</span>
                 <span class="list_title">全栈工程师</span>
                 <span class="list_content">多年研发经验，毕业后一直任职于某大型互联网公司，担任研发经理。后开始自己的创业。精通Python、NodeJS、Javascript、PHP等，一直致力于Web技术的研究</span>
             </a>
 
         </div>
-      </div>       
     </div>
-    
+</div>
+
 </body>
 </html>
