--- a/pages/Ins_3.html
+++ b/pages/Ins_3.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>lts</title>
-
+    <script src='../js/jquery-3.2.1.min.js'></script>
+    <script src='../js/common.js'></script>
     <link rel="stylesheet" href="../style/common.min.css">
     <link rel="stylesheet" href="../style/navLeft.css">
     <link rel="stylesheet" href="../style/Ins.css">
@@ -18,16 +19,15 @@
     <header>
         <div class='logo'>
             <a href="index.html">
-                        <img src='../images/logo.png' alt="流通研究所" class='logo_img'>
-                    </a>
+                <img src='../images/logo.png' alt="流通研究所" class='logo_img'>
+            </a>
         </div>
-        <div class='nav'>
             <ul class='nav_box'>
                 <li class='nav_item'>
                     <a href=''>
-                                机构介绍
-                                <i class='nav_icon'></i>
-                            </a>
+                        机构介绍
+                        <i class='nav_icon'></i>
+                    </a>
                     <div class='item_content'>
                         <a href=''>简介</a>
                         <a href=''>机构设置</a>
@@ -37,11 +37,11 @@
                 </li>
                 <li class='nav_item'>
                     <a href=''>
-                                科研资讯
-                                <i class='nav_icon'></i>                        
-                            </a>
+                        科研资讯
+                        <i class='nav_icon'></i>                        
+                    </a>
                     <div class='item_content'>
-                        <a href=''>流通所新闻</a>
+                        <a href='pages/news1.html'>流通所新闻</a>
                         <a href=''>基地资讯</a>
                         <a href=''>媒体报道</a>
                     </div>
@@ -89,7 +89,6 @@
                 </li>
 
             </ul>
-        </div>
 
 
     </header>
@@ -114,10 +113,10 @@
 
                 <!--左侧导航栏-->
                 <ul class="itemUl">
-                    <li class="itemLi"><a href="#" id="active">机构简介</a></li>
-                    <li class="itemLi"><a href="#">机构设置</a></li>
-                    <li class="itemLi"><a href="#">研究方向</a></li>
-                    <li class="itemLi"><a href="#"></a></li>
+                    <li class="itemLi"><a href="Ins_1.html" >机构简介</a></li>
+                    <li class="itemLi"><a href="Ins_2.html">机构设置</a></li>
+                    <li class="itemLi"><a href="Ins_3.html"  id="active">研究方向</a></li>
+                    <li class="itemLi"><a href="Ins_4.html">专家团队</a></li>
                 </ul>
 
                 <!--左侧导航栏下面的图片-->
