--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src='js/jquery-3.2.1.min.js'></script>
     <script src='js/unslider.min.js'></script>
     <script src='js/index.js'></script>
-
+    <script src='js/common.js'></script>
 
     <link rel="stylesheet" href="style/common.min.css">
     <link rel="stylesheet" href="style/mixin.min.css">
