--- a/pages/news3.html
+++ b/pages/news3.html
@@ -8,91 +8,90 @@
     <link rel="stylesheet" href="../style/news.css">
     <link rel="stylesheet" href="../style/navLeft.css">
     <script src='../js/jquery-3.2.1.min.js'></script>
-
+    <script src='../js/common.js'></script>
+    
     <!--分页组件-->
     <script src="../js/paging.min.js"></script>
     <link rel="stylesheet" href="../style/paging.css">
 </head>
 
 <body>
-<header>
-    <div class='logo'>
-        <a href="index.html">
-            <img src='../images/logo.png' alt="流通研究所" class='logo_img'>
-        </a>
-    </div>
-    <div class='nav'>
-        <ul class='nav_box'>
-            <li class='nav_item'>
-                <a href=''>
-                    机构介绍
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href=''>简介</a>
-                    <a href=''>机构设置</a>
-                    <a href=''>研究方向</a>
-                    <a href=''>专家团队</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>
-                    科研资讯
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href=''>流通所新闻</a>
-                    <a href=''>基地资讯</a>
-                    <a href=''>媒体报道</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>科学研究<i class='nav_icon'></i></a>
-                <div class='item_content'>
-                    <a href=''>课题研究</a>
-                    <a href=''>课题招标</a>
-                    <a href=''>成果影响</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>科研成果<i class='nav_icon'></i></a>
-                <div class='item_content'>
-                    <a href=''>学术论文</a>
-                    <a href=''>著作</a>
-                    <a href=''>研究报告</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>学术交流<i class='nav_icon'></i></a>
-                <div class='item_content'>
-                    <a href=''>来访交流</a>
-                    <a href=''>调研考察</a>
-                    <a href=''>主办年会</a>
-                    <a href=''>流通论坛</a>
+    <header>
+        <div class='logo'>
+            <a href="index.html">
+                <img src='../images/logo.png' alt="流通研究所" class='logo_img'>
+            </a>
+        </div>
+            <ul class='nav_box'>
+                <li class='nav_item'>
+                    <a href=''>
+                        机构介绍
+                        <i class='nav_icon'></i>
+                    </a>
+                    <div class='item_content'>
+                        <a href=''>简介</a>
+                        <a href=''>机构设置</a>
+                        <a href=''>研究方向</a>
+                        <a href=''>专家团队</a>
+                    </div>
+                </li>
+                <li class='nav_item'>
+                    <a href=''>
+                        科研资讯
+                        <i class='nav_icon'></i>                        
+                    </a>
+                    <div class='item_content'>
+                        <a href='pages/news1.html'>流通所新闻</a>
+                        <a href=''>基地资讯</a>
+                        <a href=''>媒体报道</a>
+                    </div>
+                </li>
+                <li class='nav_item'>
+                    <a href=''>科学研究<i class='nav_icon'></i></a>
+                    <div class='item_content'>
+                        <a href=''>课题研究</a>
+                        <a href=''>课题招标</a>
+                        <a href=''>成果影响</a>
+                    </div>
+                </li>
+                <li class='nav_item'>
+                    <a href=''>科研成果<i class='nav_icon'></i></a>
+                    <div class='item_content'>
+                        <a href=''>学术论文</a>
+                        <a href=''>著作</a>
+                        <a href=''>研究报告</a>
+                    </div>
+                </li>
+                <li class='nav_item'>
+                    <a href=''>学术交流<i class='nav_icon'></i></a>
+                    <div class='item_content'>
+                        <a href=''>来访交流</a>
+                        <a href=''>调研考察</a>
+                        <a href=''>主办年会</a>
+                        <a href=''>流通论坛</a>
 
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>咨询培训<i class='nav_icon'></i></a>
-                <div class='item_content'>
-                    <a href=''>咨询顾问</a>
-                    <a href=''>企业策划</a>
-                    <a href=''>专家培训</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>智库建设<i class='nav_icon'></i></a>
-                <div class='item_content'>
-                    <a href=''>名家百人讲座</a>
-                    <a href=''>智库动态</a>
-                </div>
-            </li>
+                    </div>
+                </li>
+                <li class='nav_item'>
+                    <a href=''>咨询培训<i class='nav_icon'></i></a>
+                    <div class='item_content'>
+                        <a href=''>咨询顾问</a>
+                        <a href=''>企业策划</a>
+                        <a href=''>专家培训</a>
+                    </div>
+                </li>
+                <li class='nav_item'>
+                    <a href=''>智库建设<i class='nav_icon'></i></a>
+                    <div class='item_content'>
+                        <a href=''>名家百人讲座</a>
+                        <a href=''>智库动态</a>
+                    </div>
+                </li>
 
-        </ul>
-    </div>
+            </ul>
 
 
-</header>
+    </header>
 <div class="container">
     <!--左侧-->
     <div class='flexbox'>
