全局替换logo链接

--- a/info/info.html
+++ b/info/info.html
@@ -15,7 +15,7 @@
     <header>
         <div class='logo'> 
             <a href="index.html">             
-            <img src='images/logo.png' alt="流通研究所" class='logo_img'>          
+            <img src='../images/logo.png' alt="流通研究所" class='logo_img'>
           </a> </div>
         <ul class='nav_box'>
             <li class='nav_item'> <a href=''>                        机构介绍                        <i class='nav_icon'></i>                    </a>
