--- a/info/info.html
+++ b/info/info.html
@@ -70,7 +70,6 @@
                 </p>
             </div>
         </div>
-        <div id="goTop"><img src="../images/goTop.png" alt=""></div>
     </div>
     <footer>
         <div class='footer-box'>
@@ -94,6 +93,7 @@
         </div>
     </footer>
     <!--回到顶部-->
+    <div id="goTop"></div>    
     <script src="../js/goTop.js"></script>
 </body>
 
