修改机构介绍命名及图片

--- a/info/info.html
+++ b/info/info.html
@@ -19,7 +19,7 @@
           </a> </div>
         <ul class='nav_box'>
             <li class='nav_item'> <a href=''>                        机构介绍                        <i class='nav_icon'></i>                    </a>
-                <div class='item_content'> <a href='ins_1.html'>简介</a> <a href='ins_2.html'>机构设置</a> <a href='ins_3.html'>研究方向</a> <a href='ins_4.html'>专家团队</a>                    </div>
+                <div class='item_content'> <a href='ins1.html'>简介</a> <a href='ins2.html'>机构设置</a> <a href='ins3.html'>研究方向</a> <a href='ins4.html'>专家团队</a>                    </div>
             </li>
             <li class='nav_item'> <a href=''>                        科研资讯                        <i class='nav_icon'></i>                                            </a>
                 <div class='item_content'> <a href='news1.html'>流通所新闻</a> <a href='news2.html'>基地资讯</a> <a href='new3.html'>媒体报道</a> </div>
