--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class='logo'> <a href="index.html">                <img src='./images/logo.png' alt="流通研究所" class='logo_img'>            </a> </div>
         <ul class='nav_box'>
             <li class='nav_item'> <a href=''>                        机构介绍                        <i class='nav_icon'></i>                    </a>
-                <div class='item_content'> <a href='./pages/ins_1.html'>简介</a> <a href='./pages/ins_2.html'>机构设置</a> <a href='./pages/ins_3.html'>研究方向</a> <a href='./pages/ins_4.html'>专家团队</a>                    </div>
+                <div class='item_content'> <a href='./pages/ins1.html'>简介</a> <a href='./pages/ins2.html'>机构设置</a> <a href='./pages/ins3.html'>研究方向</a> <a href='./pages/ins4.html'>专家团队</a>                    </div>
             </li>
             <li class='nav_item'> <a href=''>                        科研资讯                        <i class='nav_icon'></i>                                            </a>
                 <div class='item_content'> <a href='./pages/news1.html'>流通所新闻</a> <a href='./pages/news2.html'>基地资讯</a> <a href='new3.html'>媒体报道</a> </div>
@@ -72,7 +72,7 @@
                 <div class='newsLeft'>
                     <a href="#">
                                     <img src='images/info.jpg'>
-                                    <h4>王先庆著《渠道控制权》 获第五届物华图书奖三等奖</h4>        
+                                    <h4>王先庆著《渠道控制权》 获第五届物华图书奖三等奖</h4>
                                 </a>
                     <p>中国物流学术年会和全国物流职业教育教学指导委员会在2016年11月26日召开的“第十五次中国物流学术年会”大会上，表彰了第五届“物华图书奖”，广东财经大学流通经济研究所所长王先庆教授专著《渠道控制权》荣获三等奖。</p>
                 </div>
