commit -m "no modify"

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>lts</title>
-
-    <script src='js/jquery-3.2.1.min.js'></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
     <script src='js/unslider.min.js'></script>
     <script src='js/index.js'></script>
-    <script src='js/common.js'></script>
+    <script src='js/common.js'></script> 
+   
 
     <link rel="stylesheet" href="style/common.min.css">
     <link rel="stylesheet" href="style/mixin.min.css">
