commit -m “Ins_3底部人物栏bug"

--- a/pages/Ins3.html
+++ b/pages/Ins3.html
@@ -145,31 +145,23 @@
                 <div class="colu_line"></div>
                 <div class="personList">
                     <a class="list_item" href="">
-                        <img class="list_img" src="../images/Ins_img.jpg" alt="图片加载失败" title="7七月"><br>
-                        <span class="list_name">韦琦</span>
-                        <span class="list_title">副教授</span>
-                        <span class="list_content">韦琦，女，广西鹿寨人，博士，广东财经大学工商管理学院副教授，中山大学中国第三产业研究中心特约研究员，广州市现代物流与电子商务发展研究基地兼职研究员。主要从事物流与供应链管理、服务经济与管理等的教学科研工作。主持完成教育部人文社科青年课题1项，主要参与国家及省部级课题多项、市（区）政府规划课题多项，公开发表论文20余篇，主编和参编教材3部。曾获广东社会科学年会优秀论文一等奖和中国物流学术年会优秀论文三等奖。</span>
-                    </a>
+                    <img class="list_img" src="../images/Ins_img.jpg" alt="图片加载失败" title="7七月"><br>
+                    <span class="list_name">韦琦</span>
+                    <span class="list_title">副教授</span>
+                    <span class="list_content">韦琦，女，广西鹿寨人，博士，广东财经大学工商管理学院副教授，中山大学中国第三产业研究中心特约研究员，广州市现代物流与电子商务发展研究基地兼职研究员</span>
+                </a>
                     <a class="list_item" href="">
-                        <img class="list_img" src="../images/Ins_img_2.jpg" alt="图片加载失败" title="7七月"><br>
-                        <span class="list_name">阳明明</span>
-                        <span class="list_title">博士</span>
-                        <span class="list_content">阳明明，女，湖南安仁县人，汉族，广东财经大学工商管理学院教师，管理科学与工程博士，广州市现代物流与电子商务发展研究基地兼职研究员。主要研究方向为交通枢纽与区域物流增长。
-                            </span>
-                    </a>
+                    <img class="list_img" src="../images/Ins_img_2.jpg" alt="图片加载失败" title="7七月"><br>
+                    <span class="list_name">阳明明</span>
+                    <span class="list_title">博士</span>
+                    <span class="list_content">广东财经大学工商管理学院教师，管理科学与工程博士，广州市现代物流与电子商务发展研究基地兼职研究员
+                        </span>
+                </a>
                     <a class="list_item" href="">
-                        <img class="list_img" src="../images/Ins_img_3.jpg" alt="图片加载失败" title="7七月"><br>
-                        <span class="list_name">郭佳</span>
-                        <span class="list_title">博士</span>
-                        <span class="list_content">郭佳，河北省唐山人，广东财经大学工商管理学院物流管理系讲师，广州市现代物流与电子商务发展研究基地兼职研究员。毕业于中山大学岭南学院,获管理学博士学位。曾在《中国管理科学》、《系统工程》、《南方经济》等国内核心期刊发表论文，主要进行电子商务与供应链管理、按订单生产系统优化、制造企业ERP应用等方面的研究。</span>
-                    </a>
-                    <a class="list_item" href="">
-                        <img class="list_img" src="../images/Ins_img_4.jpg" alt="图片加载失败" title="7七月"><br>
-                        <span class="list_name">李柏勋</span>
-                        <span class="list_title">副教授</span>
-                        <span class="list_content">李柏勋（1981-），广东佛山人，获管理学博士学位，现任广东财经大学工商管理学院副教授，广州市现代物流与电子商务发展研究基地兼职研究员。是广东财经大学第一位“南岭学者”青年拔尖人才，也是校内培养选聘的第一位“南岭学者”。2014年入选广东高校“优秀青年教师培养计划”、第八批广东高校“千百十人才培养工程”校级培养对象。在A类I级期刊发表论文3篇，主持国家自然科学基金项目、教育部人文社科项目、广东省自然科学基金项目多项。 </span>
-                    </a>
-
+                    <img class="list_img" src="../images/Ins_img_3.jpg" alt="图片加载失败" title="7七月"><br>
+                    <span class="list_name">郭佳</span>
+                    <span class="list_title">博士</span>
+                    <span class="list_content">广东财经大学工商管理学院物流管理系讲师，广州市现代物流与电子商务发展研究基地兼职研究员。毕业于中山大学岭南学院,获管理学博士学位</span>
 
                 </div>
             </div>
