Ins详细内容设置

--- a/pages/Ins2.html
+++ b/pages/Ins2.html
@@ -80,6 +80,8 @@
                 <div class="colu_line"></div>
                 <div class="colu_news">
 
+                    <img src="../images/Ins_2_img.jpg" alt="">
+
 
                 </div>
             </div>
