ins内容栏更改

--- a/pages/Ins1.html
+++ b/pages/Ins1.html
@@ -79,7 +79,7 @@
                     <h3>机构简介</h3>
                 </div>
                 <div class="colu_line"></div>
-                <div class="colu_news">
+                <div class="colu_news colu_info">
 
                     <p>广东财经大学(Guangdong University of Finance & Economics)，1983年建立，原名广东财经学院，1985年改名为广东商学院，2013年6月19日，经教育部批准，广东商学院更名为"广东财经大学"。现由广东省人民政府与国家司法部共同建设，是一所以法律和商科为教学特色的高等学府，广东省重点建设大学之一，是国家教育部《1+2+1中美人才培养计划》定点高校之一。</p>
                     <p>是一所以经济学、管理学、法学为主体，经、管、法、文、理、工、艺等多学科协调发展的财经类本科院校。省属重点大学，华南第一家财经大学，广东和华南地区重要的经、管、法人才培养基地和科学研究基地，是中国大陆第一所以商科与法律为教学特色的高等学府。</p>
