--- a/pages/Ins2.html
+++ b/pages/Ins2.html
@@ -78,7 +78,7 @@
                     <h3>机构设置</h3>
                 </div>
                 <div class="colu_line"></div>
-                <div class="colu_news">
+                <div class="colu_news colu_info">
 
                     <img src="../images/Ins_2_img.jpg" alt="">
 
