--- a/pages/Ins4.html
+++ b/pages/Ins4.html
@@ -78,7 +78,7 @@
                     <h3>专家团队</h3>
                 </div>
                 <div class="colu_line"></div>
-                <div class="colu_news">
+                <div class="colu_news colu_info">
 
 
                 </div>
