修改了lns4个页面title，和主页统一一个实现方法

--- a/pages/Ins1.html
+++ b/pages/Ins1.html
@@ -133,10 +133,9 @@
             <div class="boxRight">
 
                 <div class="detail_colu">
-                    <div class="colu_name">
-                        <h3>机构简介</h3>
+                    <div class="part-title">
+                        机构简介
                     </div>
-                    <div class="colu_line"></div>
                     <div class="colu_news">
 
 
