--- a/pages/Ins2.html
+++ b/pages/Ins2.html
@@ -133,10 +133,10 @@
             <div class="boxRight">
 
                 <div class="detail_colu">
-                    <div class="colu_name">
-                        <h3>机构设置</h3>
+                 
+                    <div class="part-title">
+                        机构设置
                     </div>
-                    <div class="colu_line"></div>
                     <div class="colu_news">
 
 
