--- a/pages/Ins3.html
+++ b/pages/Ins3.html
@@ -132,10 +132,9 @@
             </div>
             <div class="boxRight">
                 <div class="detail_colu">
-                    <div class="colu_name">
-                        <h3>专栏题目</h3>
+                    <div class="part-title">
+                        专栏题目
                     </div>
-                    <div class="colu_line"></div>
                     <div class="colu_news">
                         <ul class="colu_news_list">
                             <li>
@@ -158,10 +157,9 @@
                 </div>
 
                 <div class="detail_colu">
-                    <div class="colu_name">
-                        <h3>最新热门</h3>
+                    <div class="part-title">
+                        最新热门
                     </div>
-                    <div class="colu_line"></div>
                     <div class="colu_news">
                         <ul class="colu_news_list">
                             <li>
@@ -185,10 +183,10 @@
 
 
                 <div class="detail_colu">
-                    <div class="colu_name">
-                        <h3>最新推荐</h3>
-                    </div>
-                    <div class="colu_line"></div>
+                        <div class="part-title">
+                                最新推荐
+                            </div>
+                    
                     <div class="colu_news">
                         <ul class="colu_news_list">
                             <li>
@@ -211,10 +209,10 @@
                 </div>
 
                 <div class="detail_colu">
-                    <div class="colu_name">
-                        <h3>研究团队文章</h3>
+                    
+                    <div class="part-title">
+                        研究团队文章
                     </div>
-                    <div class="colu_line"></div>
                     <div class="colu_news">
                         <ul class="colu_news_list">
                             <li>
@@ -238,10 +236,9 @@
 
 
                 <div class="detail_colu">
-                    <div class="colu_name">
-                        <h3>热门人物</h3>
+                    <div class="part-title">
+                        热门人物
                     </div>
-                    <div class="colu_line"></div>
                     <div class="personList">
                         <a class="list_item" href="">
                             <img class="list_img" src="../images/Ins_img.jpg" alt="图片加载失败" title="7七月">
