--- a/pages/Ins4.html
+++ b/pages/Ins4.html
@@ -133,10 +133,9 @@
             <div class="boxRight">
 
                 <div class="detail_colu">
-                    <div class="colu_name">
-                        <h3>专家团队</h3>
+                    <div class="part-title">
+                        专家团队
                     </div>
-                    <div class="colu_line"></div>
                     <div class="colu_news">
 
 
